# plume

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  build.rs  tauri.conf.json
capabilities/: default.json
icons/: icon.icns
scripts/: gen-icons.sh
src/: config.rs  crypto.rs  debug.rs  keys.rs  main.rs  messages_store.rs  nostr.rs  relay.rs
src/json/: error.rs  handler.rs  mod.rs  number.rs  parser.rs
src/websocket/: client.rs  connection.rs  frame.rs  handler.rs  handshake.rs  mod.rs  stream.rs
ui/: app.js  i18n.js  index.html  style.css
ui/locales/: de.json  en.json  es.json  fr.json  it.json
ui/modules/: auth.js  compose.js  config.js  feed.js  follows.js  keys.js  messages.js  muting.js  notes.js  profile.js  relays.js  settings.js  state.js  tauri.js  utils.js  views.js
