[package]
name = "plume"
version = "0.1.0"
description = "A cross-platform Nostr desktop client"
authors = ["Chris Burdess:"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
json = "0.12"
dirs = "5.0"
tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
url = "2.5"
bech32 = "0.11"
secp256k1 = { version = "0.29", features = ["global-context"] }
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
strip = true
lto = true

