[package]
name = "plume"
version = "0.1.0"
description = "A cross-platform Nostr desktop client"
authors = ["Chris Burdess:"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
json = "0.12"
dirs = "5.0"
tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
url = "2.5"
bech32 = "0.11"
secp256k1 = { version = "0.29", features = ["global-context"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "io-util"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
actson = "2.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
base64 = "0.22"
urlencoding = "2.1"
aes = "0.8"
cbc = "0.1"
rand = "0.8"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
strip = true
lto = true

